# syndra

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  docker_start.sh  main.py  pyproject.toml
.run/: Template JavaScript Debug.run.xml  Unnamed (2).run.xml  Unnamed.run.xml
classes/: __init__.py  media_types.py  plex_settings.py
utils/: __init__.py  environment.py  files.py  logger.py  media.py  strings.py
